fix some spacing

--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -1595,11 +1595,15 @@ input[type="number"] {
 .fm-cheat-switch-wrap {
   display: grid;
   grid-template-rows: 0fr;
-  transition: grid-template-rows 300ms cubic-bezier(0.22, 1, 0.36, 1);
+  margin-top: -0.5rem;
+  transition:
+    grid-template-rows 300ms cubic-bezier(0.22, 1, 0.36, 1),
+    margin-top 300ms cubic-bezier(0.22, 1, 0.36, 1);
 }
 
 .fm-cheat-switch-wrap--open {
   grid-template-rows: 1fr;
+  margin-top: 0;
 }
 
 .fm-cheat-switch-wrap > div {
@@ -1664,11 +1668,15 @@ input[type="number"] {
 .fm-cheat-banner-wrap {
   display: grid;
   grid-template-rows: 0fr;
-  transition: grid-template-rows 300ms cubic-bezier(0.22, 1, 0.36, 1);
+  margin-top: -0.5rem;
+  transition:
+    grid-template-rows 300ms cubic-bezier(0.22, 1, 0.36, 1),
+    margin-top 300ms cubic-bezier(0.22, 1, 0.36, 1);
 }
 
 .fm-cheat-banner-wrap--open {
   grid-template-rows: 1fr;
+  margin-top: 0;
 }
 
 .fm-cheat-banner-wrap > div {
